PROJECT( BasicQtApp )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

SET( FORMS mainwindow.ui )
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE( BasicQtApp BasicQtApp.cxx ${FORMS_HEADERS})
TARGET_LINK_LIBRARIES( BasicQtApp ${QT_LIBRARIES} )
