PROJECT( QtVTKImageFilter )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

FIND_PACKAGE( VTK REQUIRED )
INCLUDE( ${VTK_USE_FILE})

SET( HEADERS SimpleMainWindow.h )
SET( CXX SimpleMainWindow.cxx )
SET( FORMS mainwindow.ui )

QT4_WRAP_CPP(MOCS ${HEADERS} )
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE( QtVTKImageFilter QtVTKImageFilter.cxx ${CXX} ${FORMS_HEADERS} ${MOCS})
TARGET_LINK_LIBRARIES( QtVTKImageFilter ${QT_LIBRARIES} ${VTK_LIBRARIES} )
