PROJECT( BasicQtSlotSignalExample )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

SET( HEADERS Teacher.h Student.h )
SET( CXX Teacher.cxx Student.cxx)

QT4_WRAP_CPP(MOCS ${HEADERS} )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE( SlotSignalExample SlotSignalExample.cxx ${CXX} ${MOCS})
TARGET_LINK_LIBRARIES( SlotSignalExample ${QT_LIBRARIES} )
